--- a/beans/src/main/resources/insurance-templates/ru/new-policy-request-company-notification.html
+++ b/beans/src/main/resources/insurance-templates/ru/new-policy-request-company-notification.html
@@ -14,7 +14,6 @@
 						Поступила новая заявка на полис ОС ГПО ВТС<small>[#$insuranceRequest.id]</small>
 						($localized.few($insuranceRequest.type))
 					</h1>
-
 #if ($requester.name)
 					<p>
 						ФИО отправившего заявку: <strong>$requester.name</strong>!
@@ -25,25 +24,8 @@
 						$date.regular($insuranceRequest.created)
 					</p>
 					<p>
-						Сумма к оплате: <strong>₸&nbsp;$policy.calculation.premiumCost</strong>
+						Сумма к оплате: <strong>₸&nbsp;$policy.calculation.amount</strong>
 					</p>
-
-#if( $obtaining.method.name() == "EXPRESS" )
-					<p>
-						Доставка: <strong>$date.regular($obtaining.deliveryDate)</strong> 
-							<strong>$localized.regular($obtaining.deliveryTime)</strong>
-
-					</p>
-#end
-
-#if( $obtaining.method.name() == "PICKUP" )
-					<p>
-						<strong>Доставка не требуется. Самовывоз.</strong>
-					</p>
-					<p>
-						Самовывоз будет осуществлен из офиса: <strong>$localized.regular($obtaining.pickupPOS)</strong> <br />
-						Адрес: <strong>$localized.regular($obtaining.pickupPOS.address)</strong>
-#end
 
 					<p>С уважением, команда Евразии 36</p>
 				</div>
